--- a/workflow-templates/sws-esp-node-ci.yml
+++ b/workflow-templates/sws-esp-node-ci.yml
@@ -9,7 +9,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-#  We will allow to run the some of the job in parallel 
+#  Some of the jobs run in parallel mode.
 jobs:
   lint:
     runs-on: ubuntu-latest
