--- a/workflow-templates/sws-esp-node-ci.yml
+++ b/workflow-templates/sws-esp-node-ci.yml
@@ -3,9 +3,9 @@ name: ESP Node Microservers CI
 # Controls when the workflow will run
 on:
   push:
-    branches: [ main, develope ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main, develope ]
+    branches: [ main, develop ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -37,8 +37,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: Install npm packages
-        # if the node_modules already  cached, then no need to install npm packages
-        if: steps.lint-cache-nodemodules.outputs.cache-hit != 'true'
+        # if the node_modules are already  cached, then no need to install npm packages
+        if: steps.lint-cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
 
       - name:  Run lint
@@ -56,7 +56,7 @@ jobs:
           node-version: "18.16.1"
       
       - name: Cache node modules
-        id: test-cache-nodemodules
+        id: test-cache-node-modules
         uses: actions/cache@v2
         env:
           cache-name: test-cache-node-modules
@@ -69,8 +69,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: Install npm packages
-        # if the node_modules already  cached, then no need to install npm packages
-        if: steps.test-cache-nodemodules.outputs.cache-hit != 'true'
+        # If the node_modules are already cached, then no need to install npm packages
+        if: steps.test-cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
         # Run test cases for the application 
       - name: Run Unit tests with coverage
@@ -87,12 +87,12 @@ jobs:
         uses: actions/setup-node@v2
         with: 
           node-version: "18.16.1"
-      # Login to the docker container registry to publish docker images 
-      # Before using the below steps the seceret variables need available on the repository or organization level
+      # login to the docker container registry to publish docker images 
+      # Before using the below steps the secret variables need available on the repository or organization level
       - name: Docker Login 
         run: docker login ${{ secrets.ESP_ACR_ENDPOINT }} -u ${{ secrets.ESP_ACR_USERNAME }} -p ${{ secrets.ESP_ACR_PASSWORD }}
-      # Verify that same docker image exists or not 
-      - name: Verify same version already exists
+      # Verify that the same docker image exists or not 
+      - name: Docker image tag verify
         run: make package_check
       
   build_publish:
@@ -102,16 +102,16 @@ jobs:
     steps:
       # GIT checkout from the requested branch
       - uses: actions/checkout@v2
-      # Login to the docker container registry to publish docker images 
-      # Before using the below steps the seceret variables need available on the repository or organization level
+      # log in to the docker container registry to publish docker images 
+      # Before using the below steps the secret variables need available on the repository or organization level
       - name: Docker Login 
         run: docker login ${{ secrets.ESP_ACR_ENDPOINT }} -u ${{ secrets.ESP_ACR_USERNAME }} -p ${{ secrets.ESP_ACR_PASSWORD }}
-      # Build docker image
+      # Build a docker image
       - name:  Docker build 
         run: |
           export RELEASE_VERSION=$(cat package.json | jq -r .version)
           make container_build
-      # Publish docker image 
+      # Publish the docker image 
       - name: Docker publish 
         run: |
           export RELEASE_VERSION=$(cat package.json | jq -r .version)
