--- a/workflow-templates/setp-bot.yml
+++ b/workflow-templates/setp-bot.yml
@@ -1,4 +1,4 @@
-name: Dependabot auto-merge
+name: SETP Security Bot
 on: pull_request
 
 permissions:
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
     steps:
-      - name: Dependabot metadata
+      - name: SETP Security Bot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v2
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Enable auto-merge for Dependabot PRs
-      # Depending on your repo, you might want to restrict what PRs are merged by specifiying a certain dependency to merge automatically or 
-      # an update type. The following line is an example of how you can do that.
-      # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
+        # Depending on your repo, you might want to restrict what PRs are merged by specifiying a certain dependency to merge automatically or 
+        # an update type. The following line is an example of how you can do that.
+        # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
