--- a/workflow-templates/setp-security-bot.yml
+++ b/workflow-templates/setp-security-bot.yml
@@ -17,8 +17,11 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Enable auto-merge for Dependabot PRs
         # Depending on your repo, you might want to restrict what PRs are merged by specifiying a certain dependency to merge automatically or 
-        # an update type. The following line is an example of how you can do that.
+        # an update type. The following lines are an example of how you can do that.
+        # This line will only merge updates to a 'my-dependency' and patch updates
         # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
+        # This line will merge all updates expect ones to 'some-dependency'
+        # if: ${{ !contains(steps.metadata.outputs.dependency-names, 'some-dependency') }}
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
